# CrackingTheCodingInterview

./: .gitignore  C#.md  C++.md  JAVA.md  JS.md  PY.md  README.md  SWIFT.md
Chapter1/C#/: Program.cs
Chapter1/C++/: question-1.1  question-1.1.cpp
Chapter10/: question-10.6.md
Chapter11/: README.md  question-11.4.md  question-11.5.md  question-11.6.md
Chapter12/: README.md
Chapter13/: README.md  question_13.4.md  question_13.5.md  question_13.6.md  question_13.7.java  question_13.8.java  questions.md
Chapter14/: README.md  question-14.1.sql  question-14.2.sql  question-14.3.sql  question-14.4.md  question-14.5.md  question-14.6.md  question-14.7.md
Chapter15/: README.md  question-15.1.md  question-15.2.md  question-15.6.md
Chapter8/: README.md  notes.md
Chapter9/: README.md  question-9.1.md  question-9.2.md  question-9.3.md  question-9.4.md  question-9.5.md  question-9.6.md  question-9.7.md  question-9.8.md
Core/: Concepts.md  agenda.md  bitvector.md  hashtable.md
Core/C++/Core/: CMakeLists.txt  build.bat  main.cpp  run.bat
Core/C++/Core/Basics/: get-cpp-version.cpp  pointers-and-references.cpp  pointers-to-pointers.cpp  vectors.cpp
Core/C++/Core/DataStructures/LinkedList/: linked-list.h
Core/C++/Core/Searching/: binary-search.cpp  cross-linear-search.cpp
Core/C++/Core/Searching/linear-search/: linear-search.cpp  linear-search.h
Core/C++/Core/Utility/colours/: colours.cpp  colours.h
Core/C++/Testing/: CMakeLists.txt  build.bat  run.bat  searching.cpp  test.cpp
Core/C++/Testing/Framework/: test.cpp  test.h  test_runner.cpp  test_runner.h
(+383 files in other folders)
